--- a/package.json
+++ b/package.json
@@ -7,38 +7,39 @@
     "canopy-react-buttongroup": "^0.1.4",
     "draft-js": "^0.10.5",
     "draft-js-buttons": "^2.0.1",
-    "draft-js-image-plugin": "^2.0.5",
+    "draft-js-image-plugin": "^2.0.6",
     "draft-js-plugins-editor": "^2.1.1",
     "draft-js-static-toolbar-plugin": "^2.0.2",
     "draft.js": "^0.2.0",
+    "immutability-helper": "^2.8.1",
     "last-draft-js-plugins": "^1.2.0",
-    "popper.js": "^1.14.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "reactstrap": "^6.3.1",
+    "popper.js": "^1.14.4",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "reactstrap": "^6.5.0",
     "reveal": "0.0.4"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "^3.8.4",
+    "assets-webpack-plugin": "^3.9.7",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.3",
-    "browser-sync": "^2.24.6",
+    "browser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "^2.0.1",
     "css-loader": "^0.28.11",
-    "es6-promise": "^4.2.4",
+    "es6-promise": "^4.2.5",
     "file-loader": "^1.1.9",
     "imports-loader": "^0.8.0",
     "jquery": "^3.3.1",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.9.4",
     "prop-types": "^15.6.2",
-    "react-dropzone": "^4.2.13",
+    "react-dropzone": "^4.3.0",
     "react-medium-editor": "^1.8.1",
-    "react-modal": "^3.5.1",
+    "react-modal": "^3.6.1",
     "react-sortable-hoc": "^0.6.8",
-    "react-tooltip": "^3.6.1",
+    "react-tooltip": "^3.9.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.3",
     "url-loader": "^0.6.2",
